package cr.ac.una.glifo.ai

import org.springframework.stereotype.Service

@Service
class AiOrchestrator {
    // Facade for AI services: IA-00, IA-01, IA-02, etc.
    // repairRegions, reconstruct, generateStudyItems, etc.
}
