package cr.ac.una.glifo.ai.ledger

import org.springframework.stereotype.Service

@Service
class CostLedgerService {
    // Records AI calls and calculates costs/savings
}
