package cr.ac.una.glifo.ai.service

import org.springframework.stereotype.Service

@Service
class ExplanationService {
    // IA-03: Concept explanation on demand
}
