package cr.ac.una.glifo.ai.service

import org.springframework.stereotype.Service

@Service
class GenerationService {
    // IA-02: Flashcards and quizzes generation
}
