package cr.ac.una.glifo.ai.service

import org.springframework.stereotype.Service

@Service
class ReconstructionService {
    // IA-01: Reconstruct note to JSON structure
}
