package cr.ac.una.glifo.ai.service

import org.springframework.stereotype.Service

@Service
class SemanticJudgeService {
    // IA-05: Semantic coverage adjudication
}
