package cr.ac.una.glifo.ai.service

import org.springframework.stereotype.Service

@Service
class VisionRepairService {
    // IA-00: Selective repair by vision
}
